--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "postcss-loader": "^7.0.2",
     "postcss-preset-env": "^7.8.3",
     "prettier": "^2.8.1",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "sass": "^1.56.2",
     "sass-loader": "^13.2.0",
     "tailwindcss": "^3.2.4",
