--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
+        "project": "./tsconfig.json",
         "ecmaVersion": 2020,
         "sourceType": "module"
     },
