--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "parse": "^3.5.1"
+    "parse": "^3.5.1",
+    "query-string": "^8.0.3"
   }
 }
