--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "parse": "^3.5.1"
+    "handlebars-loader": "^1.7.3",
+    "history": "^5.3.0",
+    "parse": "^3.5.1",
+    "query-string": "^8.0.3"
   }
 }
