--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "RS-SCHOOL team-project",
   "main": "index.js",
   "scripts": {
+    "netlify": "node ./create-env.js && cross-env NODE_ENV=production webpack --mode production",
     "build": "cross-env NODE_ENV=production webpack --mode  production",
     "start": "webpack serve --mode development --open --progress",
     "test": "echo \"Error: no test specified\" && exit 1",
