--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "dependencies": {
     "handlebars-loader": "^1.7.3",
     "history": "^5.3.0",
+    "nouislider": "^15.6.1",
     "parse": "^3.5.1",
     "query-string": "^8.0.3"
   }
