feat: add keys into gh-actions rules

--- a/.github/workflows/rules.yml
+++ b/.github/workflows/rules.yml
@@ -20,6 +20,9 @@ jobs:
 
   Lint_and_tests:
     runs-on: ubuntu-latest
+    env:
+      BACK4APP_APP_ID: ${{ secrets.BACK4APP_APP_ID }}
+      BACK4APP_JS_KEY: ${{ secrets.BACK4APP_JS_KEY }}
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
